[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "hypernegative"
version = "0.1"
authors = [
    {name = "Giovanni Semioli", email = "g.semioli1@studenti.unisa.it"}
]
readme = "README.md"

[project.scripts]
imdb_pipeline = "pipelines.imdb_pipeline:execute"