[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "hypernegative"
version = "0.1.2.7"
authors = [
    {name = "Giovanni Semioli", email = "g.semioli1@studenti.unisa.it"}
]
readme = "README.md"
dependencies = [
    "gdown>=5.2.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
]
requires-python = ">=3.13"

[project.scripts]
pipeline = "pipelines.pipeline:execute"

[project.urls]
Homepage = "https://www.isislab.it/"
Repository = "https://github.com/hypernetwork-research-group/hypernegative"
"Issue Tracker" = "https://github.com/hypernetwork-research-group/hypernegative/issues"
